--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               type="button"
               class="btn btn-outline-primary py-2 contact_btn"
             >
-              Contact
+              Contac
             </button>
           </a>
         </div>
