--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               type="button"
               class="btn btn-outline-primary py-2 contact_btn"
             >
-              Contac
+              Contact
             </button>
           </a>
         </div>
