--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch">
           <div class="col section_cont">
             <div
-              class="card-cover h-100 overflow-hidden text-white bg-dark rounded-3 shadow-lg"
+              class="card-cover h-100 overflow-hidden text-black bg-dark rounded-3 shadow-lg"
               style="background-image: url('images/port1.png')"
             >
               <div
