--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
           <div class="col section_cont">
             <div
-              class="card-cover h-100 overflow-hidden text-white bg-dark rounded-3 shadow-lg"
+              class="card-cover h-100 overflow-hidden text-black bg-dark rounded-3 shadow-lg"
               style="background-image: url('images/port2.png')"
             >
               <div
@@ -342,7 +342,7 @@
 
           <div class="col section_cont">
             <div
-              class="card-cover h-100 overflow-hidden text-white bg-dark rounded-3 shadow-lg"
+              class="card-cover h-100 overflow-hidden text-black bg-dark rounded-3 shadow-lg"
               style="background-image: url('images/port3.png')"
             >
               <div
