--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         class="container-fluid d-flex flex-wrap align-items-center justify-content-center justify-content-md-between nav_header border-bottom"
       >
         <a
-          href="/"
+          href="#"
           class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
         >
           <img
