--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         class="container-fluid d-flex flex-wrap align-items-center justify-content-center justify-content-md-between nav_header border-bottom"
       >
         <a
-          href="#"
+          href="index.html"
           class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
         >
           <img
@@ -554,7 +554,7 @@
         <div>
           <a
             class="d-inline-flex align-items-center link-dark text-decoration-none"
-            href="/"
+            href="index.html"
             aria-label="Bootstrap"
           >
             <img src="images/logo.png" width="140" role="img" class="d-block" />
